--- a/loan.html
+++ b/loan.html
@@ -28,7 +28,7 @@
 		<label for="total_cost">Total Loan Cost:  $</label>
 		<input type="text" id="total_cost" disabled="disabled" />
 		<br><br>/
-		<img class = "displayed" src="https://www01.wellsfargomedia.com/assets/images/informational-graphics/illustrations-diagrams/personal/smarter-credit/diagram_Cost-of-Borrowing-infographic_289x135.png" alt="organized"  height="450" width="600">
+		<img class = "displayed" src="https://calculator.me/img/managing-debt-load.png" alt="organized"  height="450" width="600">
 	</div>
 </body>
 </html>
