--- a/prototype.html
+++ b/prototype.html
@@ -2,8 +2,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>CIS 2013 Grade Prototype</title>
-	<link rel="stylesheet" type="text/css" href="proto.css" />
-	<script type="text/javascript" src="proto.js"></script>
+	<link rel="stylesheet" type="text/css" href="prototype.css" />
+	<script type="text/javascript" src="prototype.js"></script>
 </head>
 
 <body>
