--- a/prototype.html
+++ b/prototype.html
@@ -27,7 +27,7 @@
  
  
  
-               <label for="grade_option">Enter 1 for audit:</label>
+               <label for="grade_option">Enter 1 for audit, 2 for letter grade</label>
                <input type="text" id="grade_option" />
                <br /><br />
  
