--- a/practice.html
+++ b/practice.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Total Loan Cost</title>
-	<link rel="stylesheet" type="text/css" href="practiceone.css" />
-	<script type="text/javascript" src="practiceone.js"></script>
+	<link rel="stylesheet" type="text/css" href="practice.css" />
+	<script type="text/javascript" src="practice.js"></script>
 </head>
 
 <body>
