--- a/formulas.html
+++ b/formulas.html
@@ -50,7 +50,7 @@
 		<label for="calc_all">Calculate everthing at once:</label>
 		<input type="button"  id="calc_all" value="Do it!!"/>
 		</fieldset>		
-
+<img class = "displayed" src="https://images-na.ssl-images-amazon.com/images/I/61imiIsclbL._SY355_.png" alt="organized"  height="450" width="600">
     </div>
 </body>
 </html>
