--- a/formulas.html
+++ b/formulas.html
@@ -50,7 +50,7 @@
 		<label for="calc_all">Calculate everthing at once:</label>
 		<input type="button"  id="calc_all" value="Do it!!"/>
 		</fieldset>		
-<img class = "displayed" src="https://images-na.ssl-images-amazon.com/images/I/61imiIsclbL._SY355_.png" alt="organized"  height="450" width="600">
+<img class = "displayed" src="https://www.thoughtco.com/thmb/6vK0WhLygbvp6u6BX1Txi5shmLA=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/balance-and-choice-699087272-5c79acf5c9e77c0001e98e5d.jpg" alt="organized"  height="450" width="600">
     </div>
 </body>
 </html>
