--- a/arrayec.html
+++ b/arrayec.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Array Practice</title>
-    <script src="ArrayPracticeEC.js"></script>
+    <script src="arrayec.js"></script>
 </head>
 
 <body>
