--- a/sales_tax.html
+++ b/sales_tax.html
@@ -8,21 +8,22 @@
 	</head>
 	<body>
 		<main>
-			<h1>Enter the values below and click "Calculate"</h1>
-			<form id="sales_form" name="sales_form" action="calculate.html"  onsubmit="return validateSalesForm()"   method="get">
+			<h1>Sales Tax Calculator</h1>
+			<p>Enter the values below and click "Calculate"</p>
+			<form id="calculateTax" name="calculateTax" action="calculate.html"  onsubmit="return calculate_click();"   method="POST">
 				<label for="subtotal">Subtotal:</label>
-				<input type="number" id="subtotal" min = "0" step = "0.01" required />
-				<br>
+				<input type="number" id="subtotal" min = "0" step = "0.01" required/>
+				<br/>
 
 				<label for="taxRate">Tax Rate:</label>
 				<input type="number" id="taxRate" min = "0" max = "100" step = "0.01" required/>
                                                                                                                                                                                                             placeholder="Re-enter the address" required>
 
-				<br>
+				<br/>
 
 				<label for="shippingCharges">Shipping Charges:</label>
 				<input type="number" id="shippingCharges" min = "0" step = "0.01" required />
-				<br>
+				<br/>
 				
                 <label for="salesTax">Sales Tax:</label>
 				<input type="text" id="salesTax" disabled = "disabled" />
