--- a/payment3023.html
+++ b/payment3023.html
@@ -13,18 +13,22 @@
 		<p>
 			Enter the values requested below and click "Calculate".
 		</p>
+		
+		<label for="full_name">Full Name:  </label>
+		<input type="text" id="full_name" />
+		<br />
 
 		<label for="loan_amount">Loan Amount:  $</label>
-		<input type="text" id="loan_amount" />
+		<input type="number" id="loan_amount" min = "0" required/>
 		<br />
 
 		<label for="loan_time">Total Months of Loan:</label>
-		<input type="text" id="loan_time" />
+		<input type="number" id="loan_time" min="0" required />
 		<br />
 		
-		<label for="interestRate">Interest Rate: </label>
-		<input type="text" id="interest_rate" />
-		<span id = "interestRatePercent"> &nbsp; % </span>
+		<label for="interest_rate">Interest Rate: </label>
+		<input type="number" id="interest_rate" min="0" max="100" required/>
+		<span id = <"interest_rate_percent"> &nbsp; % </span>
 		<br />
         
         
@@ -33,7 +37,7 @@
 		<br />
 
 		<label for="monthly_cost">Total Monthly Cost:  $</label>
-		<input type="text" id="total_cost" disabled="disabled" />
+		<input type="number" id="monthly_cost" disabled="disabled" />
 		<br><br>/
 		<img class = "displayed" src="https://calculator.me/img/managing-debt-load.png" alt="organized"  height="450" width="600">
 	</div>
